--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <script>
+          (function () {
+              const stored = localStorage.getItem("theme");
+              const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+              const theme = stored || (prefersDark ? "dark" : "light");
+              if (theme === "dark") {
+                  document.documentElement.classList.add("dark");
+              } else {
+                  document.documentElement.classList.remove("dark");
+              }
+          })();
+      </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mindful Media</title>
+    <title>MindfulMedia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
